# embedded-cxx-cookbook

./: .clang-format  .gitignore  .spelling  Makefile  README.md
.github/workflows/: avr.yml
examples/avr/atmega328p_interrupt/: CMakeLists.txt  README.md
examples/avr/atmega328p_uart/: Makefile
examples/avr/atmega328p_uart/src/: main.cpp
examples/avr/blink_cmake/: CMakeLists.txt  README.md
examples/avr/blink_cmake/cmake/: toolchain.cmake
examples/avr/blink_cmake/src/: main.cpp
examples/avr/blink_interrupt/: .gitignore  Makefile
